# OS_lab_1

./: CMakeLists.txt  attribute_manager.cpp  attribute_manager.h  directory_manager.cpp  directory_manager.h  drive_manager.cpp  drive_manager.h  file_manager.cpp  file_manager.h  main.cpp  menu.cpp  overlapped_copy.cpp  overlapped_copy.h  safe_input.h
